tests/neg/mutual/B_2.scala
class B(b: A) // error